fix card image on mobile

--- a/styles.css
+++ b/styles.css
@@ -381,6 +381,6 @@ header {
     }
 
     .card-image {
-        translate: 312% 0;
+        translate: 208% 0;
     }
 }
